--- a/packages/ui-kit/src/components/Button/Button.module.css
+++ b/packages/ui-kit/src/components/Button/Button.module.css
@@ -72,3 +72,13 @@
     opacity: 0.6;
     cursor: not-allowed;
 }
+
+/* Focus visibility для доступности */
+.button:focus-visible {
+    outline: 3px solid var(--color-accent-purple);
+    outline-offset: 3px;
+}
+
+.button:focus:not(:focus-visible) {
+    outline: none;
+}
